2005-07-20 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.2.

2005-07-13 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.sample: add list of bots.

2005-06-30 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.rb: show archive serial in <title> when month mode.

2005-06-22 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog_category.rb: define Diary#stripped_title in comment mode.

2005-06-09 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.1.

2005-06-04 TADA Tadashi <sho@spc.gr.jp>
	* plugin/archive.rb: support navi_user_month.

2005-06-03 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.b, tdiary/blogwiki_style.rb: support 'before/after n days' mode.

2005-04-06 TADA Tadashi <sho@spc.gr.jp>
	* plugin/recent-entry.rb: fix bug about escape title.

2005-03-22  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>
	* tdiary/blogrd_style.rb (RD::RD2BlogVisitor::apply_to_Headline): bug fix in headline levels

2005-03-09 TADA Tadashi <sho@spc.gr.jp>
	* recent-entry.rb, recent-entry2.rb: remove HTML tag in title.

2004-06-27 TADA Tadashi <sho@spc.gr.jp>
	* release 2.0.0.

2004-06-18 TADA Tadashi <sho@spc.gr.jp>
	* theme/blog/blog.css: modify sidebar layout.
	* plugin/blog-category.rb: support trackreceive mode.

2004-05-22 TADA Tadashi <sho@spc.gr.jp>
	* theme/blog/blog.css: add '@charset "euc-jp";'.
	* plugin/title-navi.rb: fix bug when specified not existend date.

2004-05-16 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.sample*: add self URL into @no_referer. thanks ZnZ <zn@mbf.nifty.com>.

2004-05-09 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: support absolute path of @conf.index.

2004-05-06 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: output full text into description.

2004-05-04 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add description of items into rdf.

2004-03-31 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add adf:about attr into <channel>.

2004-03-20 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.rb: disable section of TrackBack source.